# sdl2_wrapper

./: LICENSE  README.md  meson.build
include/: entity.h  game_engine.h  player.h  point.h  sprite.h  window.h
include/components/: position.h
include/ecs/: components.h  entity.h
include/ecs/components/: drawable.h  gravity.h  health.h  input.h  position.h
src/: game_engine.c  main.c  meson.build  player.c  sprite.c  window.c
src/ecs/: entity.c
src/ecs/components/: drawable.c  gravity.c  health.c  input.c  position.c
