project('sdl2_wrapper', 'c', default_options: ['warning_level=2', 'c_std=c11'])
subdir('src')
include_dir = include_directories('include')
sdl2 = dependency('sdl2')
sdl2_image = dependency('sdl2_image')
executable('sdl2_wrapper', sources, include_directories: include_dir, dependencies: [sdl2, sdl2_image], c_args: '-fplan9-extensions')
